--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo2
+spring.datasource.url=jdbc:postgresql://localhost:5432/IS_practica
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=Hakerlol1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
