--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=gretel	
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/IS_practica
+spring.datasource.username=postgres
+spring.datasource.password=Hakerlol1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
